--- a/app.css
+++ b/app.css
@@ -10,3 +10,10 @@
   z-index: 10;
   width:250px;
 }
+
+body{
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
